Initialize Database + some fix